<resources>
    <string name="app_name">Trivia Game</string>
    <string name="nombre_logo1_1">Tri</string>
    <string name="nombre_logo1_2">vi</string>
    <string name="nombre_logo1_3">a</string>
    <string name="nombre_logo2">Game</string>
    <string name="descripcion">Logo</string>
    <string name="logo_ciencia">Ciencia</string>
    <string name="bienvenido_a_trivia_game">Bienvenido a Trivia Game</string>
    <string name="inicia_sesion_para_continuar">Inicia sesion para continuar</string>
    <string name="correo">Correo</string>
    <string name="contrase_a">Contraseña</string>
    <string name="has_olvidado_tu_contrase_a">¿Has olvidado tu contraseña?</string>
    <string name="inicio">INICIO</string>
    <string name="eres_nuevo_registrate">¿Eres nuevo? Registrate!</string>
    <string name="categoria">Categoria</string>
    <string name="logo_matematica">Matemática</string>
    <string name="logo_tecnologia">Tecnología</string>
    <string name="logo_musica">Música</string>
    <string name="nombre">¿Cuál es tu Nombre?</string>
    <string name="edad">¿Cuál es tu Edad?</string>
    <string name="btnAceptar">Aceptar</string>
    <string name="et_Nombre1">Nombre</string>
    <string name="et_Nombre2">Nombre</string>
    <string name="et_Edad">Edades</string>
    <string name="mensaje">No se, cualquier cosa</string>
    <string name="titulo1">¿Qué número sigue por lógica a esta serie?</string>


</resources>