<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Inicio"
    android:padding="25dp"
    android:orientation="vertical">

    <ImageView
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_gravity="center"
        android:contentDescription="@string/descripcion"
        android:src="@drawable/logo"
        android:transitionName="logoImage" />

    <TextView
        android:id="@+id/Bienvenido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/abel"
        android:text="@string/bienvenido_a_trivia_game"
        android:textSize="36sp"
        android:textStyle="bold"
        android:transitionName="textTrans" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inicia_sesion_para_continuar"
        android:textSize="22sp"
        android:fontFamily="@font/abel"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="14dp"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:id="@+id/txtUsuario"
            android:hint="@string/correo"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abel" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:id="@+id/txtPassword"
            android:hint="@string/contrase_a"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abel"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/olvidar"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:textSize="18sp"
            android:textColor="@android:color/darker_gray"
            android:fontFamily="@font/abel"
            android:layout_gravity="end"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/has_olvidado_tu_contrase_a"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnInicioSesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inicio"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="70dp"/>


        <TextView
            android:id="@+id/nuevoUsuario"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textColor="@android:color/darker_gray"
            android:fontFamily="@font/abel"
            android:layout_gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:textStyle="bold"
            android:text="@string/eres_nuevo_registrate"/>

        </LinearLayout>
    </LinearLayout>