<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DatosActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="203dp"
                android:layout_height="203dp"
                android:layout_marginTop="32dp"
                android:layout_marginLeft="100dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/descripcion"

                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="100dp"
                android:fontFamily="@font/happy_monkey"
                android:text="@string/nombre"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <EditText
                android:id="@+id/txtNombreUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="100dp"
                android:autofillHints=""
                android:ems="10"
                android:focusable="auto"
                android:textAlignment="center"
                android:hint="@string/et_Nombre1"
                android:inputType="textPersonName"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/happy_monkey"
                android:text="@string/edad"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <NumberPicker
                android:id="@+id/npEdad"
                android:layout_width="95dp"
                android:layout_height="105dp"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="150dp"
                android:soundEffectsEnabled="true"
                android:theme="@style/AppTheme.Picker"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <Button
                android:id="@+id/button"
                android:layout_width="148dp"
                android:layout_height="54dp"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="120dp"
                android:fontFamily="@font/happy_monkey"
                android:onClick="siguiente"
                android:text="@string/btnAceptar"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/npEdad" />
        </LinearLayout>
</ScrollView>

</LinearLayout>